Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/typeargs/Newarg2.out
Newarg2.java:19:17: compiler.err.cant.apply.symbol: kindname.constructor, U, B, java.lang.String, kindname.class, T.U<Y>, (compiler.misc.no.conforming.assignment.exists: (compiler.misc.inconvertible.types: java.lang.String, java.lang.Integer))
1 error
